# observable-desktop-notebooks

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  obs  obs-sync  obs-watch  observable.py  sync-desktop.py  viewer.py
logs/security/: .security-key
notebooks/: ai-demo.html  ai-test.html  amzn-analysis.html  baumol-substitution.html  hello.html  kelly-criterion.html  mag7-analysis.html  mag7-extended.html  mutable-demo.html  nfl-analysis.html  observablehq.config.js  open-notebook.command  package.json  reactivity-demo.html
notebooks/src/: bridge.js  demo-patterns.md  env-config.json.js  env-test.md  hyperliquid.md  index.md  kelly-criterion.md  market-data.json.js  money-management.md  monte-carlo.md  quiz.js  testing.js
observable-framework-docs/: config.md  contributing.md  convert.md  data-loaders.md  deploying.md  embeds.md  files.md  getting-started.md  imports.md  index.md  javascript.md  jsx.md  markdown.md  page-loaders.md  params.md  project-structure.md  reactivity.md  search.md  sql.md  themes.md  what-is-framework.md
observable-framework-docs/inputs/: button.md  checkbox.md  color.md  date.md  file.md  form.md  index.md  radio.md  range.md  search.md  select.md  table.md  text.md  textarea.md  toggle.md
observable-framework-docs/lib/: arquero.md  arrow.md  (+21 more)
observable-plot-docs/: api.md  community.md  fetch_examples.py  getting-started.md  index.md  what-is-plot.md  why-plot.md
scripts/: e2e.py
src/: bridge.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  bridge.rs  framework.rs  main.rs  screenshot.rs  state.rs
(+294 files in other folders)
