[package]
name = "notebook-viewer"
version = "0.1.0"
description = "Observable Framework viewer with a local HTTP API"
edition = "2024"

[build-dependencies]
tauri-build = "2"

[dependencies]
anyhow = "1"
axum = "0.8"
block2 = { version = "0.6", default-features = false, features = ["alloc"] }
libc = "0.2"
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSBitmapImageRep", "NSImage", "NSImageRep"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["CFCGTypes", "objc2"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSDictionary", "NSError"] }
objc2-web-kit = { version = "0.3", default-features = false, features = ["WKSnapshotConfiguration", "WKWebView", "block2", "objc2-app-kit", "objc2-core-foundation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
